[project]
name = "dps-stac-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "rio-stac>=0.10.1",
    "rustac>=0.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]

[tool.ruff]

[tool.ruff.format]
